--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li><a href="#hero" data-after="Home">Home</a></li>
                         <li><a href="#services" data-after="Facts">Facts</a></li>
                         <li><a href="#projects" data-after="Attractions">Attractions</a></li>
-                        <li><a href="#contact" data-after="Contact">Contact Us</a></li>
+                        <li><a href="#contact" data-after="Contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
